# deep_visual_gravity_vector_detection_for_unmanned_aircraft_attitude_estimation

./: CMakeLists.txt  README.md  package.xml
docker/: Dockerfile
pysrc/common/: network_mod.py  trainer_mod.py
pysrc/regression/: frame_infer.py  train.py
pyyaml/: frame_infer_config.yaml  train_config.yaml
